Added prgram to concat both datasets and then reshuffle dataset and then save it

--- a/Brain_MRI_for_Tumor_Detection.ipynb
+++ b/Brain_MRI_for_Tumor_Detection.ipynb
@@ -2512,14 +2512,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "f89c522d-f2c2-49e0-be60-65ae7d683f72",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save the new dataset\n",
-    "tumor.to_excel(filename)"
+    "tumor.to_excel('final_tumor.xlsx', index = False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13f96d27-5154-497a-8e21-8891a126a705",
+   "metadata": {},
+   "source": [
+    "### Read both datasets, merge, and then reshuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2631c302-493b-4a04-a793-daf5f99af539",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Std</th>\n",
+       "      <th>Max_Intensity</th>\n",
+       "      <th>Min_Intensity</th>\n",
+       "      <th>Range</th>\n",
+       "      <th>Target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>39.545798</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2086.482569</td>\n",
+       "      <td>45.678032</td>\n",
+       "      <td>228</td>\n",
+       "      <td>0</td>\n",
+       "      <td>228</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>40.529922</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1803.589187</td>\n",
+       "      <td>42.468685</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250</th>\n",
+       "      <td>76.597825</td>\n",
+       "      <td>69</td>\n",
+       "      <td>3123.812758</td>\n",
+       "      <td>55.891079</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>54.046585</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2231.682388</td>\n",
+       "      <td>47.240686</td>\n",
+       "      <td>252</td>\n",
+       "      <td>0</td>\n",
+       "      <td>252</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>65.661737</td>\n",
+       "      <td>62</td>\n",
+       "      <td>2583.572833</td>\n",
+       "      <td>50.828858</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Mean  Median     Variance        Std  Max_Intensity  Min_Intensity  \\\n",
+       "248  39.545798       7  2086.482569  45.678032            228              0   \n",
+       "249  40.529922      32  1803.589187  42.468685            255              0   \n",
+       "250  76.597825      69  3123.812758  55.891079            255              0   \n",
+       "251  54.046585      61  2231.682388  47.240686            252              0   \n",
+       "252  65.661737      62  2583.572833  50.828858            255              0   \n",
+       "\n",
+       "     Range  Target  \n",
+       "248    228       1  \n",
+       "249    255       1  \n",
+       "250    255       1  \n",
+       "251    252       1  \n",
+       "252    255       1  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load and read both datasets\n",
+    "dataset1 = pd.read_excel('final_normal.xlsx')\n",
+    "dataset2 = pd.read_excel('final_tumor.xlsx')\n",
+    "\n",
+    "# merge both datasets\n",
+    "dataset = pd.concat([dataset1, dataset2], ignore_index = True)\n",
+    "dataset.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f9dfbdab-3ac7-4cd4-b090-75b9d85414a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Std</th>\n",
+       "      <th>Max_Intensity</th>\n",
+       "      <th>Min_Intensity</th>\n",
+       "      <th>Range</th>\n",
+       "      <th>Target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>30.591012</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2352.106717</td>\n",
+       "      <td>48.498523</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>47.027700</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2329.147589</td>\n",
+       "      <td>48.261243</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250</th>\n",
+       "      <td>101.934504</td>\n",
+       "      <td>131</td>\n",
+       "      <td>6320.025366</td>\n",
+       "      <td>79.498587</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>251</th>\n",
+       "      <td>78.310391</td>\n",
+       "      <td>72</td>\n",
+       "      <td>3797.831058</td>\n",
+       "      <td>61.626545</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>105.781371</td>\n",
+       "      <td>87</td>\n",
+       "      <td>9333.502759</td>\n",
+       "      <td>96.610055</td>\n",
+       "      <td>255</td>\n",
+       "      <td>14</td>\n",
+       "      <td>241</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Mean  Median     Variance        Std  Max_Intensity  Min_Intensity  \\\n",
+       "248   30.591012       1  2352.106717  48.498523            255              0   \n",
+       "249   47.027700      30  2329.147589  48.261243            255              0   \n",
+       "250  101.934504     131  6320.025366  79.498587            255              0   \n",
+       "251   78.310391      72  3797.831058  61.626545            255              0   \n",
+       "252  105.781371      87  9333.502759  96.610055            255             14   \n",
+       "\n",
+       "     Range  Target  \n",
+       "248    255       0  \n",
+       "249    255       0  \n",
+       "250    255       1  \n",
+       "251    255       1  \n",
+       "252    241       0  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now reshuffle dataset\n",
+    "dataset = dataset.sample(frac = 1).reset_index(drop = True)\n",
+    "\n",
+    "dataset.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9cd605b-c189-4a26-bbe2-745a6f700ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
