Added program to split data into training and testing portions and then applied standardscaler to rescale the independent variables

--- a/Brain_MRI_for_Tumor_Detection.ipynb
+++ b/Brain_MRI_for_Tumor_Detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "728af3e8-0f21-4fec-a8ec-96f7ef8c4b08",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,9 @@
     "import glob\n",
     "from skimage import io\n",
     "import math\n",
-    "import openpyxl"
+    "import openpyxl\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -2659,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "f9dfbdab-3ac7-4cd4-b090-75b9d85414a4",
    "metadata": {},
    "outputs": [
@@ -2696,58 +2698,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>248</th>\n",
-       "      <td>30.591012</td>\n",
+       "      <th>0</th>\n",
+       "      <td>54.046585</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2231.682388</td>\n",
+       "      <td>47.240686</td>\n",
+       "      <td>252</td>\n",
+       "      <td>0</td>\n",
+       "      <td>252</td>\n",
        "      <td>1</td>\n",
-       "      <td>2352.106717</td>\n",
-       "      <td>48.498523</td>\n",
-       "      <td>255</td>\n",
-       "      <td>0</td>\n",
-       "      <td>255</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>249</th>\n",
-       "      <td>47.027700</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2329.147589</td>\n",
-       "      <td>48.261243</td>\n",
-       "      <td>255</td>\n",
-       "      <td>0</td>\n",
-       "      <td>255</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>250</th>\n",
-       "      <td>101.934504</td>\n",
-       "      <td>131</td>\n",
-       "      <td>6320.025366</td>\n",
-       "      <td>79.498587</td>\n",
+       "      <th>1</th>\n",
+       "      <td>68.153167</td>\n",
+       "      <td>80</td>\n",
+       "      <td>3706.933568</td>\n",
+       "      <td>60.884592</td>\n",
        "      <td>255</td>\n",
        "      <td>0</td>\n",
        "      <td>255</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>251</th>\n",
-       "      <td>78.310391</td>\n",
-       "      <td>72</td>\n",
-       "      <td>3797.831058</td>\n",
-       "      <td>61.626545</td>\n",
+       "      <th>2</th>\n",
+       "      <td>35.097481</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2228.876166</td>\n",
+       "      <td>47.210975</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>93.155852</td>\n",
+       "      <td>114</td>\n",
+       "      <td>6586.925653</td>\n",
+       "      <td>81.159877</td>\n",
        "      <td>255</td>\n",
        "      <td>0</td>\n",
        "      <td>255</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>252</th>\n",
-       "      <td>105.781371</td>\n",
-       "      <td>87</td>\n",
-       "      <td>9333.502759</td>\n",
-       "      <td>96.610055</td>\n",
+       "      <th>4</th>\n",
+       "      <td>70.918036</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2428.743527</td>\n",
+       "      <td>49.282284</td>\n",
        "      <td>255</td>\n",
-       "      <td>14</td>\n",
-       "      <td>241</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2755,22 +2757,22 @@
        "</div>"
       ],
       "text/plain": [
-       "           Mean  Median     Variance        Std  Max_Intensity  Min_Intensity  \\\n",
-       "248   30.591012       1  2352.106717  48.498523            255              0   \n",
-       "249   47.027700      30  2329.147589  48.261243            255              0   \n",
-       "250  101.934504     131  6320.025366  79.498587            255              0   \n",
-       "251   78.310391      72  3797.831058  61.626545            255              0   \n",
-       "252  105.781371      87  9333.502759  96.610055            255             14   \n",
+       "        Mean  Median     Variance        Std  Max_Intensity  Min_Intensity  \\\n",
+       "0  54.046585      61  2231.682388  47.240686            252              0   \n",
+       "1  68.153167      80  3706.933568  60.884592            255              0   \n",
+       "2  35.097481       1  2228.876166  47.210975            255              0   \n",
+       "3  93.155852     114  6586.925653  81.159877            255              0   \n",
+       "4  70.918036      83  2428.743527  49.282284            255              0   \n",
        "\n",
-       "     Range  Target  \n",
-       "248    255       0  \n",
-       "249    255       0  \n",
-       "250    255       1  \n",
-       "251    255       1  \n",
-       "252    241       0  "
+       "   Range  Target  \n",
+       "0    252       1  \n",
+       "1    255       1  \n",
+       "2    255       0  \n",
+       "3    255       1  \n",
+       "4    255       0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2779,13 +2781,299 @@
     "# now reshuffle dataset\n",
     "dataset = dataset.sample(frac = 1).reset_index(drop = True)\n",
     "\n",
-    "dataset.tail()"
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c9cd605b-c189-4a26-bbe2-745a6f700ffa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now save final dataset\n",
+    "dataset.to_excel('dataset.xlsx', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3ab315a-3fb7-48eb-88b9-bf03fcfc6774",
+   "metadata": {},
+   "source": [
+    "## Apply Artificial Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8f0d460a-8a65-4b30-a1b0-c284924c18f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Std</th>\n",
+       "      <th>Max_Intensity</th>\n",
+       "      <th>Min_Intensity</th>\n",
+       "      <th>Range</th>\n",
+       "      <th>Target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>54.046585</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2231.682388</td>\n",
+       "      <td>47.240686</td>\n",
+       "      <td>252</td>\n",
+       "      <td>0</td>\n",
+       "      <td>252</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>68.153167</td>\n",
+       "      <td>80</td>\n",
+       "      <td>3706.933568</td>\n",
+       "      <td>60.884592</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35.097481</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2228.876166</td>\n",
+       "      <td>47.210975</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>93.155852</td>\n",
+       "      <td>114</td>\n",
+       "      <td>6586.925653</td>\n",
+       "      <td>81.159877</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70.918036</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2428.743527</td>\n",
+       "      <td>49.282284</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Mean  Median     Variance        Std  Max_Intensity  Min_Intensity  \\\n",
+       "0  54.046585      61  2231.682388  47.240686            252              0   \n",
+       "1  68.153167      80  3706.933568  60.884592            255              0   \n",
+       "2  35.097481       1  2228.876166  47.210975            255              0   \n",
+       "3  93.155852     114  6586.925653  81.159877            255              0   \n",
+       "4  70.918036      83  2428.743527  49.282284            255              0   \n",
+       "\n",
+       "   Range  Target  \n",
+       "0    252       1  \n",
+       "1    255       1  \n",
+       "2    255       0  \n",
+       "3    255       1  \n",
+       "4    255       0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load and read newly created dataset\n",
+    "dataset = pd.read_excel('dataset.xlsx')\n",
+    "dataset.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9db47d0d-17c6-4536-961e-69e93111fe95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Std</th>\n",
+       "      <th>Max_Intensity</th>\n",
+       "      <th>Min_Intensity</th>\n",
+       "      <th>Range</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>54.046585</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2231.682388</td>\n",
+       "      <td>47.240686</td>\n",
+       "      <td>252</td>\n",
+       "      <td>0</td>\n",
+       "      <td>252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>68.153167</td>\n",
+       "      <td>80</td>\n",
+       "      <td>3706.933568</td>\n",
+       "      <td>60.884592</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35.097481</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2228.876166</td>\n",
+       "      <td>47.210975</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>93.155852</td>\n",
+       "      <td>114</td>\n",
+       "      <td>6586.925653</td>\n",
+       "      <td>81.159877</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70.918036</td>\n",
+       "      <td>83</td>\n",
+       "      <td>2428.743527</td>\n",
+       "      <td>49.282284</td>\n",
+       "      <td>255</td>\n",
+       "      <td>0</td>\n",
+       "      <td>255</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Mean  Median     Variance        Std  Max_Intensity  Min_Intensity  \\\n",
+       "0  54.046585      61  2231.682388  47.240686            252              0   \n",
+       "1  68.153167      80  3706.933568  60.884592            255              0   \n",
+       "2  35.097481       1  2228.876166  47.210975            255              0   \n",
+       "3  93.155852     114  6586.925653  81.159877            255              0   \n",
+       "4  70.918036      83  2428.743527  49.282284            255              0   \n",
+       "\n",
+       "   Range  \n",
+       "0    252  \n",
+       "1    255  \n",
+       "2    255  \n",
+       "3    255  \n",
+       "4    255  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now classify data into dependent and independent variables\n",
+    "x = dataset.iloc[:, :-1]\n",
+    "y = dataset.iloc[:, -1]\n",
+    "x.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4d979553-4906-4296-879f-da31d21049ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split data into training and testing\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = 0.2, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1aa9ef4c-19f7-4bd4-a5ac-a39a3278da4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now rescale values using standardization so that the values are in similar range\n",
+    "scaler = StandardScaler()\n",
+    "x_train = scaler.fit_transform(x_train)\n",
+    "x_test = scaler.transform(x_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9cd605b-c189-4a26-bbe2-745a6f700ffa",
+   "id": "6f80240d-3cec-4e7e-a130-f685d9a9c40a",
    "metadata": {},
    "outputs": [],
    "source": []
